--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ html, body {
 }
 
 body {
-  background: url('img.png') no-repeat center center fixed;
+  background: url('img.jpg') no-repeat center center fixed;
   background-size: cover;
 }
 
